# -

./: README.md
Tic_tic&shinyProfiler/: marc tic toc使用说明文档.md  shinyProfiler使用说明_参照luaProfiler.md
Tic_tic&shinyProfiler/marc_TicToc/: .gitignore  CMakeLists.txt  build.sh  license.txt
Tic_tic&shinyProfiler/marc_TicToc/doc/: readme.md
Tic_tic&shinyProfiler/marc_TicToc/examples1/: frs_test.cpp
Tic_tic&shinyProfiler/marc_TicToc/examples2/: subpart.cpp  subpart.h  testtictoc.cpp
Tic_tic&shinyProfiler/marc_TicToc/examples3/: test.cpp
Tic_tic&shinyProfiler/marc_TicToc/include/: tictoc.h
Tic_tic&shinyProfiler/marc_TicToc/include1/: Timer.h  tictoc.h
Tic_tic&shinyProfiler/marc_TicToc/src/: tictoc.cpp
Tic_tic&shinyProfiler/marc_TicToc/src1/: Timer.cpp  tictoc.cpp
Tic_tic&shinyProfiler/marc_TicToc/test/: a.out  stringStream.cpp
Tic_tic&shinyProfiler/shiny_Profiler/shinyprofiler/: CMakeLists.txt  README.md
Tic_tic&shinyProfiler/shiny_Profiler/shinyprofiler/Samples/: CMakeLists.txt  ShinyNode.c
Tic_tic&shinyProfiler/shiny_Profiler/shinyprofiler/Samples/Advanced/: Advanced.cpp  CMakeLists.txt  Main.cpp  Shared.h
Tic_tic&shinyProfiler/shiny_Profiler/shinyprofiler/Samples/MainLoop/: CMakeLists.txt  MainLoop.cpp
Tic_tic&shinyProfiler/shiny_Profiler/shinyprofiler/Samples/Simple/: CMakeLists.txt  Simple.cpp
Tic_tic&shinyProfiler/shiny_Profiler/shinyprofiler/Samples/ThreadSample/: CMakeLists.txt  ThreadSample.cpp
Tic_tic&shinyProfiler/shiny_Profiler/shinyprofiler/expand/: Advanced.cpp.229r.expand  Main.cpp.229r.expand  MainLoop.cpp.229r.expand  Simple.cpp.229r.expand  ThreadSample.cpp.229r.expand  funtrace.dot
Tic_tic&shinyProfiler/shiny_Profiler/shinyprofiler/include/: ShinyConfig.h  ShinyData.h  ShinyMacros.h  ShinyManager.h  ShinyNode.h  ShinyOutput.h  ShinyPrereqs.h  ShinyVersion.h  ShinyZone.h
Tic_tic&shinyProfiler/shiny_Profiler/shinyprofiler/src/: ShinyManager.cpp  ShinyNode.cpp  ShinyNodeState.c  ShinyOutput.cpp  ShinyTools.cpp  ShinyZone.c
Tic_tic&shinyProfiler/手机cpu监控/: 2022.1.5 cpu，生产者消费者模型.ipynb  cpuFrequency(1).ipynb  cpuFrequency.ipynb  cpustatus.csv  file.csv  time1.csv  time2.csv  time4.csv  time5.csv  串行执行.ipynb  利用文件作为中转项.ipynb
aaai2022/: gridsearch_example.py
cae/: README.md
cae/configs/: test.yaml  train.yaml
cae/experiments/testing1/: test_config.json
cae/experiments/testing2/: test_config.json
cae/experiments/testing22/: test_config.json
cae/experiments/training2/: train_config.json
cae/experiments/training2/logs/: events.out.tfevents.1642727858.DESKTOP-0BABS1G.14344.0  events.out.tfevents.1642729168.DESKTOP-0BABS1G.4092.0  events.out.tfevents.1642748843.DESKTOP-0BABS1G.19584.0  events.out.tfevents.1642749472.DESKTOP-0BABS1G.11784.0  events.out.tfevents.1642749945.DESKTOP-0BABS1G.9040.0  events.out.tfevents.1642750546.DESKTOP-0BABS1G.11732.0  events.out.tfevents.1642750644.DESKTOP-0BABS1G.1140.0  events.out.tfevents.1642751050.DESKTOP-0BABS1G.16472.0  events.out.tfevents.1643188174.DESKTOP-0BABS1G.20832.0  events.out.tfevents.1643188478.DESKTOP-0BABS1G.5216.0  events.out.tfevents.1643246838.DESKTOP-0BABS1G.13000.0  events.out.tfevents.1643275472.DESKTOP-0BABS1G.6268.0  events.out.tfevents.1643275920.DESKTOP-0BABS1G.2260.0  events.out.tfevents.1643276265.DESKTOP-0BABS1G.572.0
cae/src/: test.py  train.py
cae/src/models/: cae_16x8x8_refl_pad_bin.py
